[gd_scene load_steps=19 format=3 uid="uid://b40liyrsac6lj"]

[ext_resource type="PackedScene" uid="uid://db6dfdvhbf04q" path="res://Scene/player.tscn" id="1_0f027"]
[ext_resource type="Script" uid="uid://dvacgajpxee4i" path="res://Script/main_scene.gd" id="1_gyfs4"]
[ext_resource type="PackedScene" uid="uid://b2nxxps3b2dg5" path="res://Scene/weapon.tscn" id="2_2c62f"]
[ext_resource type="PackedScene" uid="uid://bwi7dxgrcemrw" path="res://Scene/laser_weapon.tscn" id="4_8mm7a"]
[ext_resource type="PackedScene" uid="uid://5ci081adyho1" path="res://Scene/enemy.tscn" id="4_d5x1h"]
[ext_resource type="PackedScene" uid="uid://cqbpiu3xtxyuk" path="res://Asset/Model/Island/island.tscn" id="5_j1xvy"]
[ext_resource type="FontFile" uid="uid://b0q5gpw5umqs" path="res://Asset/Font/impact.ttf" id="5_wr18j"]
[ext_resource type="Script" uid="uid://cdbawhead2f71" path="res://Script/kill_zone.gd" id="6_hq1ik"]
[ext_resource type="Script" uid="uid://begaeswf6gsxy" path="res://Script/color_rect.gd" id="7_nfk4m"]
[ext_resource type="Texture2D" uid="uid://byv52fkk6hgwo" path="res://Asset/Texture/DeathScreen/death_skull_2.png" id="8_7ycvg"]
[ext_resource type="Script" uid="uid://b5wolonm6hvb7" path="res://Script/texture_rect.gd" id="9_wr18j"]
[ext_resource type="Texture2D" uid="uid://prv8c5qmwegn" path="res://Asset/Texture/DeathScreen/death_skull_1.png" id="10_qwutr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nfk4m"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="TextMesh" id="TextMesh_2c62f"]
material = SubResource("StandardMaterial3D_nfk4m")
text = "WASD to move

Hold SPACE to jump higher

Too easy? Press P!"
font = ExtResource("5_wr18j")
font_size = 75

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_nfk4m"]
plane = Plane(0, 5, 0, 0)

[sub_resource type="Curve3D" id="Curve3D_0f027"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -94.3062, 12.5158, -98.0593, 0, 0, 0, 0, 0, 0, 90.8833, 10.9682, -97.3387, 0, 0, 0, 0, 0, 0, 90.8613, 11.3172, 90.8734, 0, 0, 0, 0, 0, 0, -94.1619, 11.7589, 90.6982),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="Curve3D" id="Curve3D_hq1ik"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 99.5778, -7.87083, -99.5001, 0, 0, 0, 0, 0, 0, -99.5959, -7.97719, -99.7573, 0, 0, 0, 0, 0, 0, -99.8143, -7.76447, 99.1968, 0, 0, 0, 0, 0, 0, 99.6644, -7.76447, 99.4147),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="AnimatedTexture" id="AnimatedTexture_qwutr"]
frames = 2
frame_0/texture = ExtResource("8_7ycvg")
frame_1/texture = ExtResource("10_qwutr")
frame_1/duration = 1.0

[node name="Mainmenu" type="Node3D"]
script = ExtResource("1_gyfs4")
mob_scene = ExtResource("4_d5x1h")
spawn_interval = 1.0
weapon_scenes = Array[PackedScene]([ExtResource("4_8mm7a"), ExtResource("2_2c62f")])

[node name="TextMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(13, 0, 0, 0, -5.682482e-07, 13, 0, -13, -5.682482e-07, 0.14281082, 11.627275, 0.1320436)
mesh = SubResource("TextMesh_2c62f")
skeleton = NodePath("")

[node name="player" parent="." instance=ExtResource("1_0f027")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 403.41, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.999998, 0.00188849, 0.000121643, -0.000126435, 0.00252934, 0.999997, 0.00188817, -0.999995, 0.00252957, 0, 26.9135, 0)
light_energy = 0.7
light_angular_distance = 1.2
light_specular = 1.98
shadow_enabled = true
directional_shadow_mode = 1
directional_shadow_fade_start = 0.46

[node name="KillZone" type="Area3D" parent="."]
collision_layer = 15
collision_mask = 15
script = ExtResource("6_hq1ik")

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0919991, -96.4474, -0.1492)
shape = SubResource("WorldBoundaryShape3D_nfk4m")

[node name="SpawnPath" type="Path3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 30, 0)
curve = SubResource("Curve3D_0f027")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.003890895, 0.008356155, -0.99989927, -4.6564572e-10, 0.9999322, 0.008356006, 0.999959, 3.251472e-05, -0.0038906627, -94.3062, 12.5158, -98.0593)

[node name="WeaponSpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_hq1ik")

[node name="WeaponSpawnLocation" type="PathFollow3D" parent="WeaponSpawnPath"]
transform = Transform3D(0.0012912268, -0.0005340046, 0.999996, 0, 0.999999, 0.0005340039, -0.999996, -6.895238e-07, 0.0012912268, 99.5778, -7.87083, -99.5001)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_nfk4m")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -128.0
offset_right = 377.0
offset_bottom = 372.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AnimatedTexture_qwutr")
stretch_mode = 3
script = ExtResource("9_wr18j")

[node name="Island" parent="." instance=ExtResource("5_j1xvy")]
transform = Transform3D(0.9999619, -0.008726535, 0, 0.008724927, 0.9997776, -0.019197444, 0.00016752716, 0.019196711, 0.9998157, 24.054169, 3.7321663, 0)
